deployment/argo-rollouts/base/argo-rollouts.ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: argo-rollouts
  labels:
    istio-injection: enabled
