deployment/argo-rollouts/base/argo-rollouts.vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-rollouts
spec:
  hosts:
    - argo-rollouts.int.anhdle14.me
  gateways:
    - istio-system/gateway
  http:
    - route:
        - destination:
            port:
              number: 3100
            host: argo-rollouts-dashboard
